# vela

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/vela-bench/: Cargo.toml
crates/vela-bench/src/: cli.rs  cluster.rs  consume_phase.rs  html.rs  lib.rs  main.rs  metrics.rs  outcome.rs  params.rs  produce_phase.rs  report.rs  run.rs  verify.rs  workload.rs
crates/vela-bench/tests/: cluster_await_ready.rs  consume_error_mapping.rs  e2e_happy_path.rs  e2e_topic_already_exists.rs  e2e_wall_clock.rs  e2e_warmup_exclusion.rs  failure_reason_variants.rs  produce_error_mapping.rs  prop_concurrency.rs  prop_defaults.rs  prop_exit_code.rs  prop_floor_gating.rs  prop_key_mode.rs  prop_measured_set.rs  prop_outcome.rs  prop_param_validation.rs  prop_payload_integrity.rs  prop_rendering.rs  prop_report.rs  prop_throughput.rs
crates/vela-client/: Cargo.toml
crates/vela-client/src/: admin.rs  connection.rs  consumer.rs  core.rs  error.rs  leader_cache.rs  lib.rs  metadata_cache.rs  producer.rs  retry.rs  router.rs
crates/vela-client/tests/: leader_directed.rs  leader_discovery_resolution.rs  prop_classify_fatal.rs  prop_dispatch_reresolution.rs  prop_keyless_routing.rs  prop_leader_resolution.rs  prop_metadata_cache.rs  prop_partitioner_agreement.rs  prop_per_record_offsets.rs  prop_retry_backoff.rs  prop_retry_budget.rs  prop_seed_gap_fill.rs  prop_stale_routing.rs
crates/vela-core/: Cargo.toml
crates/vela-core/src/: consume.rs  fleet.rs  lib.rs  metadata.rs  model.rs  partition_log.rs  produce.rs  reconcile.rs  router.rs  topic.rs
crates/vela-core/tests/: consume_edge_cases.rs  delete_ordering.rs  duplicate_topic.rs  leader_location.rs  prop_atomic_deletion.rs  prop_availability_state.rs  prop_backend_command_roundtrip.rs  prop_backend_immutable.rs  prop_backend_round_trip.rs  prop_backend_selection.rs  prop_balanced_leadership.rs  prop_batch_codec.rs  prop_batch_durability.rs  prop_batch_offsets.rs  prop_batch_validation.rs  prop_commit_timeout.rs  prop_consume_max_count.rs  prop_consume_ordering.rs  prop_deleting_topic_rejects.rs  prop_invalid_consume_params.rs  prop_invalid_topic_rejection.rs  prop_keyed_routing.rs  prop_keyless_routing.rs  prop_metadata_recovery.rs  prop_nonleader_redirect.rs  prop_offset_assignment.rs  prop_one_group_per_partition.rs  prop_oversized_payload.rs  prop_partition_log_in_memory_equiv.rs  prop_partition_registration.rs  prop_replica_assignment.rs  prop_restart_preserves_committed_records.rs
crates/vela-ctl/: Cargo.toml
crates/vela-ctl/src/: cli.rs  consume.rs  lib.rs  main.rs  produce.rs  seams.rs
crates/vela-ctl/tests/: prop_consume_loop.rs  prop_produce_repl.rs  repl_and_consume.rs
crates/vela-log/: Cargo.toml
crates/vela-log/src/: lib.rs
crates/vela-log/src/wal/: clock.rs  config.rs  error.rs  frame.rs  fs.rs  index.rs  manifest.rs  mod.rs  (+3 more)
crates/vela-log/tests/: durable_wal_integration.rs  log_edge_cases.rs  prop_append_index.rs  prop_append_read_roundtrip.rs  prop_commit_bounds.rs  prop_range_read.rs  prop_revert.rs  prop_snapshot.rs  sim_feature_gate.rs  workspace_structure.rs
crates/vela-proto/: Cargo.toml  build.rs
crates/vela-proto/proto/: vela.proto
crates/vela-proto/src/: lib.rs  partition.rs
crates/vela-proto/tests/: prop_canonical_partitioner.rs  proto_surface.rs
crates/vela-raft/: Cargo.toml
crates/vela-raft/src/: lib.rs  sim.rs
crates/vela-raft/tests/: leaders_distinct_nodes.rs  prop_append_bounded.rs  prop_apply_ordering.rs  prop_commit_advancement.rs  prop_commit_monotonic.rs  prop_election_start.rs  prop_follower_accept_reject.rs  prop_follower_ack_durable.rs  prop_group_commit_equivalence.rs  prop_heartbeat_interval.rs  prop_higher_term_stepdown.rs  prop_lagging_convergence.rs  prop_leader_commit_durable.rs  prop_log_matching.rs  prop_metadata_election_safety.proptest-regressions  prop_metadata_election_safety.rs  prop_no_second_vote.rs  prop_no_term_regression.rs  prop_persist_before_emit.rs  prop_recover_hard_state.rs  prop_retry_backoff.rs  prop_single_leader.rs  prop_vote_decision.rs
crates/vela-server/: Cargo.toml
crates/vela-server/src/: clock.rs  config.rs  convert.rs  driver.rs  lib.rs  main.rs  membership.rs  node.rs  paths.rs  reconciler.rs  registry.rs  service.rs  transport.rs
crates/vela-server/tests/: apply_on_every_node.rs  batch_admission_errors.rs  batch_equivalence_parity.rs  batch_not_leader_redirect.rs  batch_produce_consume.rs  cluster_artifacts.rs  cluster_smoke.rs  cold_restart.rs  concurrent_admin_converges.rs  cross_node_produce_consume.rs  delete_propagation.rs  describe_cluster.rs  durable_driver_restart.rs  group_commit_concurrent_produce.rs  integration.rs  lifecycle_logs.rs  meta_admin_before_leader.rs  meta_follower_catchup.rs  meta_restart_recovery.rs  meta_single_node_bootstrap.rs  prop_advertised_accept.rs  prop_advertised_resolution.rs  prop_error_roundtrip.rs  prop_member_roundtrip.rs  prop_membership.rs  prop_self_member_mirror.rs  prop_unset_parity.rs  workspace_build.rs
crates/vela-sim/: Cargo.toml  GUARANTEES.md
crates/vela-sim/src/: artifact.rs  clock.rs  cluster.rs  codec.rs  history.rs  lib.rs  network.rs  rng.rs  runtime.rs  scenario.rs  scheduler.rs  storage.rs  strategy.rs  workload.rs
crates/vela-sim/tests/: artifact_content.rs  budget_override.rs  defaults_coverage.rs  event_budget_override.rs  guarantees_mapping.rs  prop_ack_durability.rs  prop_clock.rs  prop_commit_monotonicity.rs  prop_consume_validity.rs  prop_dst_runs.rs  prop_election_safety.proptest-regressions  prop_election_safety.rs  prop_history.rs  prop_leader_completeness.rs  prop_linearizability.rs  prop_liveness.rs  prop_log_matching.rs  prop_message_flow.rs  prop_metadata_convergence.rs  prop_network_faults.rs  prop_offset_integrity.rs  prop_recovery.rs  prop_reproducibility.rs  prop_scenario.rs  prop_scheduler.rs  prop_state_machine_safety.rs  prop_storage_fidelity.rs  prop_synthetic_violation.rs  prop_topic_coordination.rs  prop_workload.rs  regression_replay.rs  scenario_presets.rs  storage_edge_cases.rs  workload_edge_cases.rs
(+48 files in other folders)
