[package]
name = "vela-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# Dependency edges point inward only: vela-core -> vela-raft, vela-log.
[dependencies]
vela-raft.workspace = true
vela-log.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true

[features]
# Deterministic-simulation surface, gated behind this non-default feature (off
# by default). Enables `vela-log`'s `sim` seam and, in turn, exposes the
# `PartitionLog::Sim` backend (the real `DurableWal` over the deterministic
# fault filesystem) and the `MetadataController` injection path the `vela-sim`
# harness drives. Production builds (feature off) are byte-for-byte unchanged:
# every sim-only item is `#[cfg(feature = "sim")]`.
sim = ["vela-log/sim"]
