[package]
name = "vela-log"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# vela-log is an innermost crate: it declares no dependency on any other Vela crate.
[dependencies]
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
